out.txt
   Compiling rust_fin_rs v0.1.1 (/home/user/workspace_rust/rust_fin_rs)
error[E0432]: unresolved import `crate::stock_market_ohlcv::stock_market_ohlcv`
 --> src/stock_market_ohlcv/stock_market_test_ohlcv.rs:4:32
  |
4 | use crate::stock_market_ohlcv::stock_market_ohlcv::StockData;
  |                                ^^^^^^^^^^^^^^^^^^ could not find `stock_market_ohlcv` in `stock_market_ohlcv`

warning: unused import: `rust_decimal_macros::dec`
  --> src/stock_market_ohlcv/stock_market_test_ohlcv.rs:12:5
   |
12 | use rust_decimal_macros::dec;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` on by default

For more information about this error, try `rustc --explain E0432`.
warning: `rust_fin_rs` (lib) generated 1 warning
error: could not compile `rust_fin_rs` (lib) due to 1 previous error; 1 warning emitted
warning: build failed, waiting for other jobs to finish...
error[E0433]: failed to resolve: could not find `stock_market` in the crate root
  --> src/stock_market_ohlcv/stock_market_test_ohlcv.rs:15:12
   |
15 | use crate::stock_market::stock_market_ohlcv::*;
   |            ^^^^^^^^^^^^ could not find `stock_market` in the crate root

error[E0433]: failed to resolve: use of undeclared type `StockInformation`
   --> src/stock_market_ohlcv/stock_market_test_ohlcv.rs:161:29
    |
161 |     let stock_information = StockInformation::new(
    |                             ^^^^^^^^^^^^^^^^ use of undeclared type `StockInformation`

error[E0433]: failed to resolve: use of undeclared type `StockInformation`
   --> src/stock_market_ohlcv/stock_market_test_ohlcv.rs:184:9
    |
184 |         StockInformation::new("BenCorpo".to_string(), "BNCRP".to_string(), vec![]);
    |         ^^^^^^^^^^^^^^^^ use of undeclared type `StockInformation`

error[E0433]: failed to resolve: use of undeclared type `StockInformation`
   --> src/stock_market_ohlcv/stock_market_test_ohlcv.rs:202:29
    |
202 |     let stock_information = StockInformation::new(
    |                             ^^^^^^^^^^^^^^^^ use of undeclared type `StockInformation`

error[E0433]: failed to resolve: use of undeclared type `StockInformation`
   --> src/stock_market_ohlcv/stock_market_test_ohlcv.rs:225:29
    |
225 |     let stock_information = StockInformation::new(
    |                             ^^^^^^^^^^^^^^^^ use of undeclared type `StockInformation`

error[E0433]: failed to resolve: use of undeclared type `StockInformation`
   --> src/stock_market_ohlcv/stock_market_test_ohlcv.rs:298:29
    |
298 |     let stock_information = StockInformation::new(
    |                             ^^^^^^^^^^^^^^^^ use of undeclared type `StockInformation`

error[E0433]: failed to resolve: use of undeclared type `StockInformation`
   --> src/stock_market_ohlcv/stock_market_test_ohlcv.rs:405:29
    |
405 |     let stock_information = StockInformation::new(
    |                             ^^^^^^^^^^^^^^^^ use of undeclared type `StockInformation`

error[E0433]: failed to resolve: use of undeclared type `StockInformation`
   --> src/stock_market_ohlcv/stock_market_test_ohlcv.rs:448:29
    |
448 |     let stock_information = StockInformation::new(
    |                             ^^^^^^^^^^^^^^^^ use of undeclared type `StockInformation`

error[E0433]: failed to resolve: use of undeclared type `StockInformation`
   --> src/stock_market_ohlcv/stock_market_test_ohlcv.rs:468:29
    |
468 |     let stock_information = StockInformation::new(
    |                             ^^^^^^^^^^^^^^^^ use of undeclared type `StockInformation`

error[E0433]: failed to resolve: use of undeclared type `StockInformation`
   --> src/stock_market_ohlcv/stock_market_test_ohlcv.rs:488:29
    |
488 |     let stock_information = StockInformation::new(
    |                             ^^^^^^^^^^^^^^^^ use of undeclared type `StockInformation`

error[E0433]: failed to resolve: use of undeclared type `StockInformation`
   --> src/stock_market_ohlcv/stock_market_test_ohlcv.rs:512:9
    |
512 |         StockInformation::get_post_split_data(dec!(5), dec!(4), dec!(942), dec!(56));
    |         ^^^^^^^^^^^^^^^^ use of undeclared type `StockInformation`

error[E0433]: failed to resolve: use of undeclared type `StockInformation`
   --> src/stock_market_ohlcv/stock_market_test_ohlcv.rs:519:9
    |
519 |         StockInformation::get_post_split_data(dec!(1), dec!(20), dec!(580_000_000), dec!(0.64));
    |         ^^^^^^^^^^^^^^^^ use of undeclared type `StockInformation`

error[E0433]: failed to resolve: use of undeclared type `StockInformation`
   --> src/stock_market_ohlcv/stock_market_test_ohlcv.rs:529:27
    |
529 |     let dividend_income = StockInformation::get_dividend_income(dec!(2000), dec!(0.51), dec!(4));
    |                           ^^^^^^^^^^^^^^^^ use of undeclared type `StockInformation`

error[E0433]: failed to resolve: use of undeclared type `StockInformation`
   --> src/stock_market_ohlcv/stock_market_test_ohlcv.rs:536:22
    |
536 |     let yield_rate = StockInformation::get_yield_rate(dec!(1.4), dec!(57.4));
    |                      ^^^^^^^^^^^^^^^^ use of undeclared type `StockInformation`

error[E0433]: failed to resolve: use of undeclared type `StockInformation`
   --> src/stock_market_ohlcv/stock_market_test_ohlcv.rs:543:27
    |
543 |     let interest_income = StockInformation::get_interest_income(dec!(5.7), dec!(1000));
    |                           ^^^^^^^^^^^^^^^^ use of undeclared type `StockInformation`

Some errors have detailed explanations: E0432, E0433.
For more information about an error, try `rustc --explain E0432`.
error: could not compile `rust_fin_rs` (lib test) due to 16 previous errors
